--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,19 +8,18 @@
 }
 
 
-tbody td {
+/* tbody td {
   
     text-align: left;
-    /* height: 10px; */
     height: 50px;
     vertical-align: center;
-  }
+  } */
 
-
+/* 
 tbody th {
     height: auto;
     text-align: center; 
-  }
+  } */
 
 
 
