--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,9 @@
 .slider img, .card-image{
-    height: 450px;
-    object-fit: cover
+    /* height: 500px;
+    width: 500px */
+    height: 700px;
+    width: 700px;
+    /* object-fit: cover */
 }
 
 .pointer{
