--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,19 @@
-.slider img, .card-image{
-    /* height: 500px;
+.slider img,
+.card-image {
+  /* height: 500px;
     width: 500px */
-    height: 700px;
-    width: 700px;
-    /* object-fit: cover */
+  height: 700px;
+  width: 700px;
+  /* object-fit: cover */
 }
 
-.pointer{
-    cursor: pointer
+.pointer {
+  cursor: pointer;
 }
 
+.active {
+  color: indigo;
+}
 
 /* tbody td {
   
@@ -23,6 +27,3 @@ tbody th {
     height: auto;
     text-align: center; 
   } */
-
-
-
